# todozi

./: .gitignore  README.md  osxcross
legal/: bbl_software_license.md  pp.md  tos.md
tdz/: Cargo.toml  README.md
tdz/docs/: TODOZI_TAGS_REFERENCE.md  add.md  agent.md  agent_lib.md  all-tdz.md  api.md  api_lib.md  backup.md  base_lib.md  chunking_lib.md  cli_lib.md  cmd.md  commands.md  done.md  emb.md  emb_enh.md  emb_lib.md  embed.md  error.md  error_lib.md  extract.md  extract_lib.md  human-flag.md  idea.md  idea_lib.md  lib_lib.md  list.md  main_lib.md  memory.md  memory_lib.md  migration_lib.md  models_lib.md  new_tag.md  original_implementation.md  project.md  queue.md  queue_orig.md  reminder_lib.md  search.md  search_lib.md  (+7 more)
tdz/examples/: basic_usage.rs  done.rs  emb.rs  emb_2.rs  emb_3.rs  javascript_client.js  json_processing.rs  natural_language.rs  server.rs  task.rs  tdzcnt.rs
tdz/src/: agent.rs  api.rs  base.rs  chunking.rs  cli.rs  emb.rs  error.rs  extract.rs  idea.rs  lib.rs  main.rs  memory.rs  migration.rs  models.rs  nodejs.rs  python.rs  reminder.rs  search.rs  server.rs  storage.rs  summary.rs  tags.rs  tdz.rs  tdz_tls.rs  tests.rs  todozi.rs  tui.rs  types.rs  validate_commands_docs.rs
tdz/src/toolbox/: mod.rs  todozi_exe.rs  todozi_tool.rs
tdz/src/toolbox/json/: create_idea_tool.json  create_memory_tool.json  create_task_tool.json  search_tasks_tool.json  simple_todozi_tool.json  todozi_comprehensive_tool_definition.json  todozi_generated_tool_definition.json  todozi_tool_call.json  todozi_tool_definition.json  update_task_tool.json
tdz_js/: README.md  binding.js  chat.js  example.js  index.d.ts  models.js  package-lock.json  package.json  server.js  system.js  tdz.js  todozi.js
tdz_js/gui/: tdz.html  tdz.mjs  tdz_client.js  tdz_server.js  tdz_style.css
tdz_py/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
tdz_py/todozi/: main.py  storage.py  todozi.tcss  tui.py
tdz_py/todozi/chat/: hello.py
tdz_py/todozi/examples/: 01_basic_task_creation.py  03_task_management.py  04_projects.py  05_memories_and_ideas.py  06_search_functionality.py  07_statistics.py  09_batch_operations.py  10_advanced_features.py  12_dev_team_workflow.py  README.md
tdz_py/todozi/train/batches/custom/: batch_10%_sample1_20251027_215114.json  batch_100_sample1_20251027_215114.json  batch_100_sample3_20251027_215114.json  batch_5000_sample3_20251027_215114.json  batch_500_sample1_20251027_215114.json  batch_500_sample2_20251027_215114.json  batch_500_sample3_20251027_215114.json  custom_batch_metadata_20251027_215114.json
tdz_py/todozi/train/batches/kfold/: kfold_metadata_20251027_215115.json
tdz_py/todozi/train/batches/ml/: batch_diverse_1000_20251027_215119.json  batch_test_15pct_20251027_215119.json  batch_validation_15pct_20251027_215119.json
train/: NOT-DONE-server.py
train/batches/balanced/: batch_clustered_10clusters_20251027_215120.json
train/batches/basic/: batch_metadata_20251027_215112.json  batch_micro_20251027_215112.json  batch_small_20251027_215112.json  batch_tiny_20251027_215112.json
train/batches/custom/: batch_10%_sample2_20251027_215114.json  batch_10%_sample3_20251027_215114.json  batch_1000_sample1_20251027_215114.json  batch_1000_sample2_20251027_215114.json  batch_1000_sample3_20251027_215114.json  batch_100_sample2_20251027_215114.json  batch_5000_sample1_20251027_215114.json  batch_5000_sample2_20251027_215114.json
wsm/: Cargo.toml
wsm/src/: lib.rs
