[package]
name = "todozi"
version = "0.1.0"
edition = "2021"
description = "AI/Human task management system with file-based storage"
authors = ["CyberBoost"]
license = "MIT"
repository = "https://github.com/cyber-boost/todozi"
keywords = ["todo", "task-management", "ai", "productivity"]
categories = ["command-line-utilities", "development-tools"]

# Binary targets
[[bin]]
name = "todozi"
path = "src/main.rs"
required-features = ["core", "cli", "tui", "server]

[[bin]]
name = "tdz"
path = "src/main.rs"
required-features = ["core", "cli", "tui", "server]

# Library target
[lib]
name = "todozi"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# Feature definitions
[features]
default = ["core", "cli", "tui", "server"]
core = ["dirs", "regex", "rand", "rand_pcg", "reqwest", "md5", "sha2", "base64"]
cli = ["clap", "tabled", "dialoguer", "indicatif"]
tui = ["ratatui", "crossterm", "color-eyre", "palette", "tui-big-text", "notify"]
server = ["tokio", "rayon"]
python = ["pyo3", "core"]
pyo3-extension-module = ["pyo3/extension-module"]
nodejs = ["napi", "napi-derive", "core", "tokio"]

# Core dependencies used across multiple features
[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = { version = "0.21", optional = true }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"], optional = true }
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
dialoguer = { version = "0.11", optional = true }
dirs = { version = "5.0", optional = true }
env_logger = { version = "0.10", optional = true }
futures = "0.3"
hf-hub = { version = "0.4", features = ["tokio"] }
indicatif = { version = "0.17", optional = true }
log = "0.4"
md5 = { version = "0.7", optional = true }
rand = { version = "0.8", optional = true }
rand_pcg = { version = "0.3", optional = true }
regex = { version = "1.0", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", optional = true }
tabled = { version = "0.14", optional = true }
thiserror = "1.0"
tokenizers = "0.20"
tokio = { version = "1.0", features = ["full"], optional = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
hlx = "1.2.5"

# Terminal UI dependencies
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }
color-eyre = { version = "0.6", optional = true }
palette = { version = "0.7", optional = true }
tui-big-text = { version = "0.7.1", optional = true }
notify = { version = "6.1", optional = true }

# Python bindings (pyo3)
pyo3 = { version = "0.21", features = ["abi3-py38"], optional = true }

# JavaScript bindings (napi-rs)
napi = { version = "2.16", default-features = false, features = ["napi4", "tokio_rt"], optional = true }
napi-derive = { version = "2.16", optional = true }

# Development dependencies
[dev-dependencies]
tempfile = "3.0"
