[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "todozi"
version = "0.1.0"
description = "AI/Human task management system with file-based storage"
authors = [
    {name = "CyberBoost"}
]
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.19.0",
    "rich>=13.0.0",
]

[project.scripts]
todozi-tui = "todozi.tui:main"
todozi-cli = "todozi.main:main"

[tool.maturin]
manifest-path = "../Cargo.toml"
python-source = "."
module-name = "todozi"
features = ["python", "pyo3-extension-module"]
